--- a/blocks/popup/btn-close/popup__btn-close.css
+++ b/blocks/popup/btn-close/popup__btn-close.css
@@ -22,7 +22,7 @@
     .popup__btn-close {
         width: 20px;
         height: 20px;
-        top: -36pxpx;
+        top: -36px;
         right: 0px;
     }
 }
