--- a/blocks/popup/__btn-save/popup__btn-save.css
+++ b/blocks/popup/__btn-save/popup__btn-save.css
@@ -1,8 +1,7 @@
 .popup__btn-save {
-    margin: 0 36px 37px;/*Из за того, что в макете линии идут как 0px при указанных размерах в 1px, а так же
-    line-height больше чем указанные размеры текстового блока, то расстояние от кнопки до низа блока не совпадает с 
-    макетом, если не прав, то поправьте как оно может совпасть не корректируя другие размеры*/
+    margin: 0 36px 37px;
     padding: 0;
+    border: none;
     width: 358px;
     height: 50px;
     font-style: normal;
@@ -19,11 +18,12 @@
 
 .popup__btn-save:hover {
     opacity: 0.8;
+    cursor: pointer;
 }
 
-/*Для размера ниже 640 скоректированны отступы на рассогласование размера блока в макете и указаниях line-height
-Опять сделано так, чтобы или там или там заставить исправить?
-PS По заданию на больших разрешениях нестыковка в размерах может быть 30px на малых в 10px*/
+/*скоректированны отступы на рассогласование размера блока в макете и указаниях line-height
+Но на 1280 Sum(элементов)=219 а в браузере 220.6, не пойму откуда +1.6px при том что border margin padding подсчитаны
+PS По заданию на больших разрешениях нестыковка в размерах может быть 30px на малых в 10px не знаю будет ли это спасением)*/
 @media screen and (max-width: 640px) {
     .popup__btn-save {
         margin: 0 22px 25px;
