--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,5 +5,8 @@
     position: fixed;
     top: 0px;
     left: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
