--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -2,4 +2,7 @@
     background-color: #000000;
     margin: 0;
     padding: 0;
+    /*min-height: 100vh;
+    display: flex;
+    flex-direction: column;*/
 }
