--- a/blocks/popup/__btn-save/popup__btn-save.css
+++ b/blocks/popup/__btn-save/popup__btn-save.css
@@ -1,5 +1,5 @@
 .popup__btn-save {
-    margin: 0 36px 37px;
+    margin: 18px 36px 37px;
     padding: 0;
     border: none;
     width: 358px;
@@ -12,7 +12,7 @@
     color: #FFFFFF;
     background: #000000;
     border-radius: 2px;
-    transition: opacity 3s;
+    transition: opacity 1s;
     box-sizing: border-box;
 }
 
@@ -26,8 +26,10 @@
 PS По заданию на больших разрешениях нестыковка в размерах может быть 30px на малых в 10px не знаю будет ли это спасением)*/
 @media screen and (max-width: 640px) {
     .popup__btn-save {
-        margin: 0 22px 25px;
+        margin: 15px 22px 25px;
         width: 238px;
         height: 46px;
+        font-size: 14px;
+        line-height: 17px;
     }
 }
