--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,7 @@
     max-width: 1280px;
     min-width: 320px;
     box-sizing: border-box;
-    padding: 0 max(min(calc(200px - (1280px - 100vw)/5.0),200px),19px);/**/
+    padding: 0; /*max(min(calc(200px - (1280px - 100vw)/5.0),200px),19px);*/
     margin: 0 auto;/**/
     background-color: #000000;
     color: #FFFFFF;
