--- a/blocks/popup/_invisible/popup_invisible.css
+++ b/blocks/popup/_invisible/popup_invisible.css
@@ -1,5 +1,5 @@
 .popup_invisible { 
-    display: none;
+    /*display: none;*/
+    visibility: hidden;
+    opacity: 0;
 }
-/*согласен, что технически это модификатор блока, однако привязка к блоку лишает его возможности быть исползованным в других местах
-но спорить о том как лучше не буду (тем более нет знаний\опыта), забрал из миксов*/
