--- a/blocks/element/__img/element__img.css
+++ b/blocks/element/__img/element__img.css
@@ -1,6 +1,6 @@
 .element__img {
     width: 100%;
-    max-height: 282px;
+    height: 282px;
     border-radius: 10px 10px 0 0;
     object-fit: cover;
 }
