--- a/blocks/popup/_invisible/popup_invisible.css
+++ b/blocks/popup/_invisible/popup_invisible.css
@@ -1,5 +1,5 @@
 .popup_invisible { 
-    /*display: none;*/
-    visibility: hidden;
+    display: none;
+    visibility: hidden;/**/
     opacity: 0;
 }
