--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -5,6 +5,7 @@
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     color: #000000;
+    height: 330px;
 }
 
 @media screen and (max-width: 640px) {
