--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -8,8 +8,9 @@
     line-height: 17px;
     border: 0px;
     border-bottom: 1px solid rgb(0, 0, 0, 0.2);
-    margin: 0 36px 30px;
-    /*height: 14px;Высота текста 17???12px*/
+    margin: 10px 36px 5px;
+    /*margin: 0 36px 30px;
+    height: 14px;Высота текста 17???12px*/
 }
 
 @media screen and (max-width: 640px) {
