--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,8 +8,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    visibility: visible;
-    opacity: 1;
+    opacity: 0;
+    visibility: hidden;
     transition: visibility 1.5s, opacity 0.5s linear;
 }
 
