--- a/pages/index.css
+++ b/pages/index.css
@@ -33,9 +33,14 @@
 @import url(../blocks/popup/__btn-close/popup__btn-close.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__input/popup__input.css);
+
 @import url(../blocks/popup/__btn-save/popup__btn-save.css);
-@import url(../blocks/popup/_invisible/popup_invisible.css);
+@import url(../blocks/popup/_visible/popup_visible.css);
 @import url(../blocks/popup/__img/popup__img.css);
 @import url(../blocks/popup/__figure/popup__figure.css);
 @import url(../blocks/popup/__figcap/popup__figcap.css);
 
+@import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__error/_visible/popup__error_visible.css);
+@import url(../blocks/popup/__input/_error/popup__input_error.css);
+/*@import url(../blocks/popup/__btn-save/_disabled/popup__btn-save_disabled.css);*/
