--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -25,6 +25,8 @@
 @import url(../blocks/element/__img/element__img.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__cont/element__cont.css);
+@import url(../blocks/element/__like-count/element__like-couns.css);
+
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
