--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -47,4 +47,5 @@
 @import url(../blocks/popup/__error/_visible/popup__error_visible.css);
 @import url(../blocks/popup/__input/_type_error/popup__input_type_error.css);
 @import url(../blocks/popup/__btn-save/_disabled/popup__btn-save_disabled.css);
+@import url(../blocks/popup/__btn-delete/popup__btn-delete.css);
 
