--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,6 +2,11 @@
     width: 120px;
     height: 120px;
     border-radius: 50%;
+    position: relative;
+}
+
+.profile__avatar:hover {
+    opacity: 0.2;
 }
 
 @media screen and (max-width: 800px) {
