--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -2,6 +2,7 @@
     display: flex;
     padding: 40px 0 51px;
     align-items: center;
+    position: relative;
 }
 
 @media screen and (max-width: 800px) {
