--- a/src/blocks/element/__btn-heart/element__btn-heart.css
+++ b/src/blocks/element/__btn-heart/element__btn-heart.css
@@ -1,5 +1,6 @@
 .element__btn-heart {
-    margin: 30px 20px 30px 0px;
+    /* margin: 30px 20px 30px 0px; */
+    margin: 0 0 3px 0;
     padding: 0;
     min-width: 22px;
     height: 19px;
