--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -27,7 +27,7 @@
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__cont/element__cont.css);
 @import url(../blocks/element/__like-count/element__like-couns.css);
-
+@import url(../blocks/element/__cont-like/element__cont-like.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
